templates/deployment/hello-kubernetes/ingress.yaml
# hello-kubernetes-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: hello-kubernetes-hello-world
          servicePort: 80
        path: /hello-world(/|$)(.*)
      - backend:
          serviceName: hello-kubernetes-custom-message
          servicePort: 80
        path: /custom-message(/|$)(.*)
